--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   rel="stylesheet"
 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light">
+<meta name="supported-color-schemes" content="light">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="white">
     <title>khel</title>
   </head>
   <body>
